# libtorch_demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
